with Time as a field of BasinNetwork
to avoid  multiplication of Time instances